
== 3/17/12

Initial release.

== 3/18/12

Added hooks for subclassing.