@@ -4,7 +4,7 @@ Gem::Specification.new do |spec|
 
   spec.name                      =  'compositing-array-unique'
   spec.rubyforge_project         =  'compositing-array-unique'
-  spec.version                   =  '1.0.2'
+  spec.version                   =  '1.0.3'
 
   spec.summary                   =  "Provides CompositingArray::Unique."
   spec.description               =  "An implementation of Array that permits chaining, where children inherit changes to parent and where parent settings can be overridden in children, and that retains sorted order, ensuring inserted values are unique."
